--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,10 @@ plugins {
     id 'signing'
     id 'nebula.release' version '15.2.0'
     id 'jacoco'
-    id 'com.github.kt3k.coveralls' version '2.8.2'
     id "io.github.gradle-nexus.publish-plugin" version "1.0.0"
+    id 'net.wooga.snyk' version '0.10.0'
+    id "net.wooga.snyk-wdk-java" version "0.3.0"
+    id "net.wooga.cve-dependency-resolution" version "0.3.0"
 }
 
 group 'com.wooga.gradle'
@@ -36,7 +38,7 @@ repositories {
 dependencies {
     implementation localGroovy()
     implementation gradleApi()
-    implementation 'com.google.guava:guava:29.0-jre'
+    implementation 'com.google.guava:guava:30.0-jre'
 
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
     testImplementation 'junit:junit:4.13'
@@ -47,9 +49,13 @@ dependencies {
         }
     }
     testImplementation 'com.github.stefanbirkner:system-rules:1.18.0'
-    testImplementation 'com.wooga.gradle:gradle-commons-test:0.3.0'
+    testImplementation 'com.wooga.gradle:gradle-commons-test:[1,2)'
 
     api 'org.apache.commons:commons-math3:3.6.1'
+}
+
+snyk {
+    projectEnvironment = "distributed"
 }
 
 JavaPluginConvention javaConvention = (JavaPluginConvention)project.getConvention().getPlugin(JavaPluginConvention.class);
